# sentinel

./: .env.example  .gitignore
sentinel-claude-code/backend/: DATABASE_SCHEMA_AUDIT.md  Dockerfile  MODULE1_TEST_RESULTS.md  MODULE4_TEST_RESULTS.md  TODO.md  pyproject.toml
sentinel-claude-code/backend/alembic/versions/: 5d08be7e2a62_add_roles_and_user_roles_tables.py  c85556e31b52_add_audit_columns_to_group_join_tables.py  fb34df276d25_add_tenant_tables.py
sentinel-claude-code/backend/docs/: Instructions.md  README.md  SEED_DATA_CREDENTIALS.md  Sentinel_Schema_All_Tables.sql
sentinel-claude-code/backend/docs/RBAC/: DYNAMIC_RBAC_SUMMARY.md  RBAC_IMPLEMENTATION_GUIDE.md
sentinel-claude-code/backend/docs/authentication/: README.md
sentinel-claude-code/backend/docs/flexible_fields/: flexible_fields_metadata.md
sentinel-claude-code/backend/docs/groups/: README.md
sentinel-claude-code/backend/docs/integration/: hierarchical-access-case-study.md  msw-sentinel-fit-analysis.md  setup-guide.md  technical-integration.md
sentinel-claude-code/backend/docs/operational/: rbac-implementation-plan.md
sentinel-claude-code/backend/docs/project/: LifeCycle.md  TASK_LIST.md
sentinel-claude-code/backend/docs/resources/: README.md  frontend-integration.md
sentinel-claude-code/backend/scripts/: api_audit.py  database_schema_audit.py  fix_metadata_columns.py  seed_simple_logistics.py
sentinel-claude-code/backend/src/: config.py  database.py  main.py
sentinel-claude-code/backend/src/core/: cache.py  (+2 more)
sentinel-claude-code/backend/tests/: README.md  conftest.py  test_app.py
(+784 files in other folders)
